fixed issue with menu button spacing

--- a/app/(site)/globals.css
+++ b/app/(site)/globals.css
@@ -4048,6 +4048,8 @@ input[type=button].btn-block {
   background-color: transparent;
   border: 0.125rem solid transparent;
   border-radius: 0.5rem;
+  display: flex;
+  flex-direction: row;
 }
 .navbar-toggler:hover, .navbar-toggler:focus {
   text-decoration: none;
